Adding PageHeaderComponent e Ajustes

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,18 +5,18 @@
   <ul class="navbar-nav bg-gradient-primary sidebar sidebar-dark accordion" id="accordionSidebar">
 
 
-    <!-- Sidebar - Brand -->
-    <a routerLink="/home" class="sidebar-brand d-flex align-items-center mb-5 mt-5
+    <!-- Sidebar - Brand Usuario-->
+    <div class="sidebar-brand d-flex align-items-center mb-5 mt-5
           justify-content-center">
       <div class="sidebar-brand-icon mt-4">
-        <img src="./../assets/img/logo.png" class="img-fluid" style="width: 90%" alt="Imagem responsiva">
+        <img src="./../assets/img/user_.jpg" class="img-profile rounded-circle" style="width: 70%" alt="">
       </div>
-    </a>
-
+    </div>
+    <p class="text-center text-white">Dowglas Maia</p>
 
     <li class="nav-item mt-4">
       <a class="nav-link" href="#" aria-expanded="false">
-        <i class="fas fa-home"></i>
+          <i class="fas fa-chart-line"></i>
         <span class="hide-menu">Relatório</span>
       </a>
     </li>
@@ -53,8 +53,8 @@
     <!-- Main Content -->
     <div id="content">
 
-      <!-- Nave Menu -->     
-        <app-nav></app-nav>     
+      <!-- Nave Menu -->
+      <app-nav></app-nav>
 
       <!-- Begin Page Content -->
       <div class="container-fluid">
@@ -66,11 +66,11 @@
       <!-- End of Main Content -->
 
       <!-- Footer  -->
-      <footer class="sticky-footer fixed-bottom" style="font-size: 12px !important">
+      <footer class="sticky-footer bg-white" style="font-size: 12px !important">
         <div class="container mt-5 text-center">
 
-          <div class="pull-right hidden-xs nav-link " >
-            Desenvolvimento:<a href="https://github.com/dowglasmaia" target="_new"  >
+          <div class="pull-right hidden-xs nav-link ">
+            Desenvolvimento:<a href="https://github.com/dowglasmaia" target="_new">
               <strong> Dowglas Maia</strong></a>
           </div>
 
@@ -84,21 +84,4 @@
     <!-- End of Content Wrapper -->
 
   </div>
-  <!-- Rodape da Pagina 
-  <div class="col-12 footer mt-4">
-      <span style="text-align: right; float: left; margin-top: 10px">
-          &copy; 2019 | Carpal Tratores
-      </span>
-
-      <span style="text-align: right; float: right; margin-top: 10px">
-          Desenvolvimento:
-          <strong>Dowglas Maia</strong>
-      </span>
   </div>
-  End of Page Wrapper -->
-
-  <!-- Scroll to Top Button
-  <a class="scroll-to-top rounded" href="#page-top">
-      <i class="fas fa-angle-up mr-2"></i>
-  </a>
-  -->
