--- a/src/app/core/components/nav/nav.component.html
+++ b/src/app/core/components/nav/nav.component.html
@@ -1,7 +1,6 @@
 <!-- Topbar -->
 <nav class="navbar navbar-expand navbar-light bg-white topbar mb-4
     static-top shadow ">
-
     <!-- Topbar Navbar -->
     <ul class="navbar-nav ml-auto">
 
@@ -9,35 +8,11 @@
         <div class="topbar-divider d-none d-sm-block"></div>
 
         <!-- Nav Item - User Information -->
-        <li class="nav-item dropdown no-arrow">
-            <a class="nav-link dropdown-toggle" href="#!" id="userDropdown" role="button" data-toggle="dropdown"
-                aria-haspopup="true" aria-expanded="false">
-
-                <span class="mr-2 d-none d-lg-inline text-gray-600
-                    small">
-                    <strong>Usuário :</strong> Dowglas Maia
-                </span>
-
-                <img class="img-profile rounded-circle" src="./../../../../assets/img/avatar-1.png">
+        <li class="nav-item mr-4">
+            <a class="nav-link" href="#">
+                Logout
+                <i class="fas fa-power-off ml-2"></i>
             </a>
-
-            <!-- Dropdown - User Information -->
-            <div class="dropdown-menu dropdown-menu-right shadow
-                animated--grow-in" aria-labelledby="userDropdown">
-                <a class="dropdown-item" routerLink="#" style="background: none !important">
-                    <i class="fas fa-user fa-sm fa-fw mr-2
-                        text-gray-400"></i>
-                    Perfil
-                </a>
-
-                <div class="dropdown-divider"></div>
-                <a class="dropdown-item" href="#!"  style="background: none !important"
-                    data-toggle="modal" data-target="#logoutModal">
-                    <i class="fas fa-sign-out-alt fa-sm fa-fw mr-2
-                        text-gray-400"></i>
-                    Logout
-                </a>
-            </div>
         </li>
     </ul>
 </nav>
