--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -57,7 +57,7 @@
       <app-nav></app-nav>
 
       <!-- Begin Page Content -->
-      <div class="container-fluid">
+      <div class="container-fluid pb-5 mb-2">
 
         <router-outlet></router-outlet>
 
@@ -66,7 +66,7 @@
       <!-- End of Main Content -->
 
       <!-- Footer  -->
-      <footer class="sticky-footer bg-white" style="font-size: 12px !important">
+      <footer class="sticky-footer bg-white pt-6" style="font-size: 12px !important">
         <div class="container mt-5 text-center">
 
           <div class="pull-right hidden-xs nav-link ">
