Adding Reports Base

--- a/src/app/core/components/header-nav/header-nav.component.html
+++ b/src/app/core/components/header-nav/header-nav.component.html
@@ -10,9 +10,9 @@
   <p class="text-center text-white">Dowglas Maia</p>
 
   <li class="nav-item mt-4">
-    <a class="nav-link" routerLinkActive="active" routerLink="#" aria-expanded="false">
+    <a class="nav-link" routerLinkActive="active" routerLink="/reports" aria-expanded="false">
       <i class="fas fa-chart-line"></i>
-      <span class="hide-menu">Relatório</span>
+      <span class="hide-menu">Relatórios</span>
     </a>
   </li>
 
@@ -30,7 +30,7 @@
   <hr class="sidebar-divider my-0 mb-2">
 
   <li class="nav-item">
-    <a class="nav-link" routerLinkActive="active" routerLink="categories" aria-expanded="false">
+    <a class="nav-link" routerLinkActive="active" routerLink="/categories" aria-expanded="false">
       <i class="fas fa-chart-pie"></i>
       <span class="hide-menu">Categorias</span>
     </a>
