--- a/src/app/pages/reports/reports/reports.component.html
+++ b/src/app/pages/reports/reports/reports.component.html
@@ -1,3 +1,115 @@
-<p>
-  reports works!
-</p>
+<!--Migalha de Pão-->
+<app-bread-crumb [items]="[{text: 'Relatório de Receitas e Despesas'}]"> </app-bread-crumb>
+<!-- HEADER -  Dinâmico-->
+<app-page-header page-title="Relatório de Receitas e Despesas" button-text="" button-link="" button-class=""
+  icon-class=""></app-page-header>
+
+<div class="card">
+  <div class="card-header">
+    Selecione o Mês e ano para gerar os relatórios!
+  </div>
+
+  <div class="card-body">
+    <div class="form-row">
+      <div class="form-group col-md-7">
+        <label for="month">Mês</label>
+        <select #month name="month" id="month" class="form-control">
+          <option value="">Selecione um mês</option>
+
+          <option value="1">Janeiro</option>
+          <option value="2">Fevereiro</option>
+          <option value="3">Março</option>
+          <option value="4">Abril</option>
+          <option value="5">Maio</option>
+          <option value="6">Junho</option>
+          <option value="7">Julho</option>
+          <option value="8">Agosto</option>
+          <option value="9">Setembro</option>
+          <option value="10">Outubro</option>
+          <option value="11">Novembro</option>
+          <option value="12">Dezembro</option>
+
+        </select>
+      </div>
+
+      <div class="form-group col-md-5">
+        <label for="year">Ano</label>
+        <select #year name="year" id="year" class="form-control">
+          <option value="">Selecione um Ano</option>
+
+          <option value="2015">2015</option>
+          <option value="2016">2016</option>
+          <option value="2017">2017</option>
+          <option value="2018">2018</option>
+          <option value="2019">2019</option>
+
+        </select>
+      </div>
+    </div> <!-- / Row-->
+
+    <div class="form-row">
+      <div class="col-md text-right">
+        <button type="submit" (click)="generateReports()" class="btn btn-primary">
+          Gerar Relatórios
+        </button>
+      </div>
+    </div>
+
+  </div>
+  <!--/card-body-->
+
+  <!--Card Relatorio-->
+  <div class="card-deck mt-5 mb-5">
+
+    <!-- card Receitas-->
+    <div class="card text-center text-white bg-success">
+      <div class="card-header">
+        TOTAL DE RECEITAS
+      </div>
+      <div class="card-body">
+        <h3 class="card-tile">
+          2500
+        </h3>
+      </div>
+    </div>
+
+    <!-- Card Despesas-->
+    <div class="card text-center text-white bg-danger">
+      <div class="card-header">
+        TOTAL DE DESPESAS
+      </div>
+      <div class="card-body">
+        <h3 class="card-tile">
+          1000
+        </h3>
+      </div>
+    </div>
+
+    <!-- Card Saldo-->
+    <div class="card text-center text-white bg-info">
+      <div class="card-header">
+        SALDO
+      </div>
+      <div class="card-body">
+        <h3 class="card-tile">
+          1500
+        </h3>
+      </div>
+    </div>
+  </div>
+  <!--/card-deck-->
+
+</div> <!-- /Card-->
+
+<hr>
+
+<!-- Graficos-->
+<div class="row mt-5 mb-4">
+  <div class="col-md-6">
+    Gráficos de Receitas
+  </div>
+
+  <div class="col-md-6">
+    Gráficos de Despesas
+  </div>
+</div>
