Ajutes no Page Header Components

--- a/src/app/pages/reports/reports/reports.component.html
+++ b/src/app/pages/reports/reports/reports.component.html
@@ -1,8 +1,8 @@
 <!--Migalha de Pão-->
 <app-bread-crumb [items]="[{text: 'Relatório de Receitas e Despesas'}]"> </app-bread-crumb>
 <!-- HEADER -  Dinâmico-->
-<app-page-header page-title="Relatório de Receitas e Despesas" button-text="" button-link="" button-class=""
-  icon-class=""></app-page-header>
+<app-page-header page-title="Relatório de Receitas e Despesas" 
+[show-button]="false"></app-page-header>
 
 <div class="card">
   <div class="card-header">
