--- a/src/app/core/components/footer/footer.component.html
+++ b/src/app/core/components/footer/footer.component.html
@@ -1,4 +1,4 @@
-<footer class="sticky-footer bg-white pt-6" style="font-size: 12px !important">
+<footer class="sticky-footer bg-white pt-6" style="font-size: 12px; position:0 !important">
     <div class="container mt-5 text-center">
 
       <div class="pull-right hidden-xs nav-link ">
