--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -4,11 +4,11 @@
         <div class="col-lg-5 col-md-7">
             <div class="card shadow border-0">
                 <div class="card-header">
-                    <h3 class="text-center mt-5">Bem Vindo ao Sistema</h3>
-                    <h5 class="text-center mt-3 mb-3">Fincy Control </h5>
+                    <h3 class="text-center mt-5">Bem Vindo</h3>
+                
                 </div>
 
-                <h6 class="text-center mt-2">Login</h6>
+                <h6 class="text-center mt-2">Entre com suas Credencias para logar</h6>
 
                 <div class="card-body px-lg-5 py-lg-5">
 
@@ -37,7 +37,7 @@
                         </div>
 
                         <div class="text-center">
-                            <button class="mt-3 btn-block btn-lg" type="submit" [disabled]="!formGroup.valid">
+                            <button class="btn btn-block btn-lg btn-primary" type="submit" [disabled]="!formGroup.valid">
                                 Login
                             </button>
                         </div>
