--- a/src/app/core/components/nav/nav.component.html
+++ b/src/app/core/components/nav/nav.component.html
@@ -9,8 +9,13 @@
                     <span class="navbar-toggler-bar bar3"></span>
                 </button>
             </div>
-            <a class="navbar-brand" routerLink="/" ><strong> Controle Financeiro</strong></a>
-        </div>      
+            <a class="navbar-brand" routerLink="/"><strong> Controle Financeiro</strong></a>
+        </div>
+    </div>
+
+
+    <div>
+        <button type="button" class="btn btn-outline-info" (click)="logout()">Sair</button>
     </div>
 </nav>
 <!-- End Navbar -->
