impl-> Guarda de Rota

--- a/src/app/pages/reports/reports/reports.component.html
+++ b/src/app/pages/reports/reports/reports.component.html
@@ -7,8 +7,7 @@
   <div class="card">
     <div class="card-header">
       <i class="far fa-calendar-alt"></i>
-      Selecione o Mês e ano para gerar os relatórios! - Para Realizar os Teste selecione o <strong>MÊS JUNHO, ANO
-        2019</strong>
+      Selecione o <strong>Mês</strong> e <strong>Ano</strong> para gerar o relatório!
     </div>
 
     <div class="card-body">
