Add, guarda rota para, evitar navegar para a pg de login, estando logado

--- a/src/app/pages/categories/category-form/category-form.component.html
+++ b/src/app/pages/categories/category-form/category-form.component.html
@@ -1,3 +1,4 @@
+<div class="container-fluid">
 <!--BREAD-CRUMB  - Migalha de Pão-->
 <app-bread-crumb [items]="[{text: 'Category', link: '/categories'}, {text: pageTitle}]">
 </app-bread-crumb>
@@ -46,3 +47,4 @@
     </button>
 
 </form>
+</div>
