--- a/src/app/pages/entries/entry-form/entry-form.component.html
+++ b/src/app/pages/entries/entry-form/entry-form.component.html
@@ -1,3 +1,4 @@
+<div class="container-fluid">
 <!--Migalha de Pão-->
 <app-bread-crumb [items]="[{text: 'Lançamentos', link: '/entries'}, {text: pageTitle}]"> </app-bread-crumb>
 
@@ -111,6 +112,8 @@
     </button>
 
 </form>
+
+</div>
 
 <!--
 <pre>
