--- a/src/app/pages/categories/category-list/category-list.component.html
+++ b/src/app/pages/categories/category-list/category-list.component.html
@@ -1,3 +1,4 @@
+<div class="container-fluid">
  <!--Migalha de Pão-->
  <app-bread-crumb
     [items]= "[{text: 'Categorias'}]"
@@ -41,3 +42,4 @@
         </tr>
     </tbody>
 </table>
+]</div>
