--- a/src/app/pages/entries/entry-list/entry-list.component.html
+++ b/src/app/pages/entries/entry-list/entry-list.component.html
@@ -1,3 +1,4 @@
+<div class="container-fluid">
  <!--Migalha de Pão-->
  <app-bread-crumb
     [items]= "[{text: 'Lançamentos'}]"
@@ -58,3 +59,5 @@
 
     </tbody>
 </table>
+
+</div>
